--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "discord.js-bot",
-  "version": "1.0.0",
-  "description": "It's basically a template for discord bot",
-  "main": "index.js",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "discord.js": "^13.1.0",
+    "fs": "^0.0.1-security"
   },
+  "name": "djsbt",
+  "version": "1.0.0",
+  "description": "A discord.js bot template",
+  "type":"module",
+  "engines": {
+    "node": "16.6"
+  },
+  "main": "src/index.js",
   "devDependencies": {},
   "scripts": {
-    "test": "ping"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "cls"
+    "url": "git+https://github.com/bagelwastaken/-Outdated-discordbottemplate.git"
   },
-  "keywords": [
-    "ping"
-  ],
-  "author": "bagel",
-  "license": "ISC"
+  "author": "Mathusan",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/bagelwastaken/-Outdated-discordbottemplate/issues"
+  },
+  "homepage": "https://github.com/bagelwastaken/-Outdated-discordbottemplate#readme"
 }
